# moodle-reorganizer

./: .gitignore  ARCHITECTURE.es.md  ARCHITECTURE.md  CHANGELOG.es.md  CHANGELOG.md  MIGRATION.es.md  MIGRATION.md  QUICKREF.es.md  QUICKREF.md  README.md  USAGE.es.md  USAGE.md  main.py  pyproject.toml  rebuild.sh
examples/: all_question_types.gift  example_usage.sh
src/reorganizer/: __init__.py  cli.py  file_utils.py  gift_processor.py  markdown_to_html.py  reorganizer.py  text_utils.py  xml_processor.py  xml_utils.py
tests/: test_basic.py
